# PANENE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  param.cpp  param.h  result.txt  timer.cpp  timer.h
benchmark/: CMakeLists.txt  Makefile  answer.cpp  kd_tree_benchmark.cpp  knn_table_benchmark.cpp  metadata.h  node_split_n_test.cpp  param.cpp
benchmark/data/: sift.sh
data/: .gitignore  answer  answer.sh  answer_converter.py  binary_converter.py  creditcard.py  creditcard.sh  download.sh  metadata.sh  mnist.py  preprocess.py  trim.py
data/blob/: generate.py
data/gist/: download.sh
data/glove/: .gitignore  download.sh  preprocess.py
data/mnist/: .gitignore  download.sh
data/sift/: .gitignore  download.sh
data/stl10/: .gitignore  download.sh
data/trevi/: .gitignore  download.sh
examples/: CMakeLists.txt  simple_kdtree.cpp
examples/density/: CMakeLists.txt  baseline.csv  baseline.html  baseline.py  density.cpp  progressive.html
examples/kernel_density/: appendix.html  appendix.py  knnkde.py  main.py  offline.py  offline_visualizer.html  online.py  online_visualizer.html  progressive_kde.py  result.json  visualizer.html
examples/kernel_density/result/: result_knn_1.json  result_knn_10.json  result_knn_100.json  result_knn_20.json  result_knn_5.json  result_knn_50.json  result_knn_n.json  result_sci.json
examples/regression/: knnreg.py  main.py  online.py  online_visualizer.html  result1.json  result2.json  visualizer.html
examples/tsne/: .gitignore  CMakeLists.txt  compare.html  config.h  config.txt  data.py  ee_visualizer.html  generate.py  labels.sorted.txt  mnist.sh  progressive_tsne.cpp  progressive_tsne.h  progressive_tsne_main.cpp  sptree.cpp  sptree.h  tsne.cpp  tsne.h  tsne_main.cpp  util.h  visualizer.html
examples/tsne/bhtsne/: CMakeLists.txt  README.md  tsne.cpp  tsne.h  tsne_main.cpp
examples/tsne/config/: config.cpp  config.h
examples/tsne/early-exaggeration/: copy.sh  ee_visualizer.html  mnist_visualizer.html
examples/tsne/lib/: config.cpp  config.h  sptree.cpp
examples/tsne/mnist/: .gitignore  download.sh
examples/tsne/mnist_data/: convert.py
examples/tsne/responsive_tsne/: CMakeLists.txt  responsive_tsne.cpp  responsive_tsne.h  responsive_tsne_main.cpp
examples/tsne/result/: copy.sh  mnist_visualizer.html  visualizer.html
figures/benchmark1/: chart.html  log.tsv
figures/benchmark2/: chart2.html  knn_table_log.tsv
flann/: main.cpp  param.cpp  param.h
include/: base_index.h  binary_data_source.h  data_source.h  dist.h  kd_tree.h  kd_tree_index.h  naive.h  progressive_base_index.h  progressive_kd_tree_index.h  progressive_knn_table.h  random_data_source.h
include/data_sink/: vector_data_sink.h
include/data_source/: array_data_source.h  binary_data_source.h  data_source.h  random_data_source.h  vector_data_source.h
include/scheduler/: linear_scheduler.h  naive_scheduler.h  scheduler.h
include/util/: matrix.h  random.h  result_set.h  timer.h
paknn/: Makefile  a.out  knn_table.cpp  knn_table.h  knn_table_flann.h  paknn.cpp  paknn.h
paknn/indices/: base_index.h  dist.h  kd_tree_index.cpp  kd_tree_index.h
paknn/test/: kdtree_test.h
paknn/util/: allocator.h  dynamic_bitset.h  heap.h  logger.h  matrix.h  random.h  result_set.h
panene/: .gitignore  Makefile  knn_table.h  knn_table_flann.h  main.cpp  panene.cpp  progressive_knn_table.h
panene/data/: data_source.h  naive_data_source.h
panene/include/: dist.h  progressive_kd_tree_index.h  progressive_knn_table.h
panene/include/util/: dynamic_bitset.h  timer.h
panene/index/: kd_tree_index.h  progressive_base_index.h  progressive_kd_tree_index.h
panene/indices/: base_index.h  dist.h  kd_tree_index.h  progressive_base_index.h  progressive_kd_tree_index.h
panene/scheduler/: naive_scheduler.h  schedule.h
panene/src/: CMakeLists.txt  panene.cpp
panene/table/: knn_table.h  progressive_knn_table.h
panene/test/: kdtree_test.h  knn_table_test.h  progressive_knn_table_benchmark.h  progressive_knn_table_test.h  test.h  tests.h
panene/tests/: progressive_knn_table_benchmark.cpp  progressive_knn_table_benchmark.h
panene/util/: allocator.h  data_source.h  heap.h  logger.h  result_set.h  timer.h
python/: .gitignore  CMakeLists.txt  panene_python.h  pynene.cpp  pynene.pxd  pynene.pyx  setup.py.in
python/pynene/: panene.pxd  panene.pyx  panene_python.h
python/tests/: test.py  test_table.py
src/: CMakeLists.txt  panene.cpp  roaring.c
tests/: CMakeLists.txt  answer.cpp  benchmark.cpp  imbalance.cpp  kd_tree_benchmark.cpp  knn_table_benchmark.cpp  metadata.h  progressive_kd_tree_index_benchmark.cpp  progressive_knn_table_benchmark.cpp  table.cpp  tree.cpp
